--- a/packages/bundles-dynamic/.env.local
+++ b/packages/bundles-dynamic/.env.local
@@ -1,4 +1,4 @@
-CLOUD_IDENTIFIER=gcp-us
-APPLICATION_ID=todo-application-id
-APPLICATION_URL=https://todo.url.com/url
-INITIAL_PROJECT_KEY=bundles-starter-development
+CLOUD_IDENTIFIER=gcp-eu
+APPLICATION_ID=clq2h5di0002i6n3c3s6garnc
+APPLICATION_URL=https://octagen-dynamic-bundles-demo.netlify.app
+INITIAL_PROJECT_KEY=octagen-nb-test
